Ajout readme final et modèle

--- a/src/model.ipynb
+++ b/src/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,8 +258,8 @@
     "    \"XGBoost\": XGBClassifier()\n",
     "}\n",
     "\n",
-    "def showModelComparison(X_train, y_train) -> None:\n",
-    "    for name, model in models.items():\n",
+    "def showModelComparison(X_train: list, y_train:list, modelDict: dict) -> None:\n",
+    "    for name, model in modelDict.items():\n",
     "        print(f\"\\n=========={name}===========\")\n",
     "        model.fit(X_train, y_train)\n",
     "        y_pred = model.predict(X_test)\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -310,16 +310,16 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     55042\n",
-      "           1       0.90      0.73      0.80        91\n",
+      "           1       0.93      0.75      0.83        91\n",
       "\n",
       "    accuracy                           1.00     55133\n",
-      "   macro avg       0.95      0.86      0.90     55133\n",
+      "   macro avg       0.97      0.87      0.91     55133\n",
       "weighted avg       1.00      1.00      1.00     55133\n",
       "\n",
       "Confusion Matrix :\n",
-      "[[55035     7]\n",
-      " [   25    66]]\n",
-      "AUC : 0.9212\n",
+      "[[55037     5]\n",
+      " [   23    68]]\n",
+      "AUC : 0.9265\n",
       "\n",
       "==========XGBoost===========\n",
       "Classification Report :\n",
@@ -340,25 +340,12 @@
     }
    ],
    "source": [
-    "showModelComparison(X_train, y_train)"
+    "showModelComparison(X_train, y_train, models)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Appliquer SMOTE sur l'ensemble d'entraînement\n",
-    "smote = SMOTE(random_state=42)\n",
-    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -367,6 +354,77 @@
      "text": [
       "\n",
       "==========Logistic Regression===========\n",
+      "Classification Report :\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.98      0.99     55042\n",
+      "           1       0.06      0.88      0.11        91\n",
+      "\n",
+      "    accuracy                           0.98     55133\n",
+      "   macro avg       0.53      0.93      0.55     55133\n",
+      "weighted avg       1.00      0.98      0.99     55133\n",
+      "\n",
+      "Confusion Matrix :\n",
+      "[[53806  1236]\n",
+      " [   11    80]]\n",
+      "AUC : 0.9708\n",
+      "\n",
+      "==========Random Forest===========\n",
+      "Classification Report :\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     55042\n",
+      "           1       0.91      0.75      0.82        91\n",
+      "\n",
+      "    accuracy                           1.00     55133\n",
+      "   macro avg       0.95      0.87      0.91     55133\n",
+      "weighted avg       1.00      1.00      1.00     55133\n",
+      "\n",
+      "Confusion Matrix :\n",
+      "[[55035     7]\n",
+      " [   23    68]]\n",
+      "AUC : 0.9267\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelsBalanced = {\n",
+    "    \"Logistic Regression\": LogisticRegression(class_weight='balanced'),\n",
+    "    \"Random Forest\": RandomForestClassifier(class_weight='balanced'),\n",
+    "}\n",
+    "\n",
+    "showModelComparison(X_train, y_train, modelsBalanced)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Appliquer SMOTE sur l'ensemble d'entraînement\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==========Logistic Regression===========\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Classification Report :\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -387,16 +445,16 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     55042\n",
-      "           1       0.84      0.79      0.81        91\n",
+      "           1       0.86      0.79      0.82        91\n",
       "\n",
       "    accuracy                           1.00     55133\n",
-      "   macro avg       0.92      0.90      0.91     55133\n",
+      "   macro avg       0.93      0.90      0.91     55133\n",
       "weighted avg       1.00      1.00      1.00     55133\n",
       "\n",
       "Confusion Matrix :\n",
-      "[[55028    14]\n",
+      "[[55030    12]\n",
       " [   19    72]]\n",
-      "AUC : 0.9704\n",
+      "AUC : 0.9800\n",
       "\n",
       "==========XGBoost===========\n",
       "Classification Report :\n",
@@ -417,12 +475,12 @@
     }
    ],
    "source": [
-    "showModelComparison(X_train_resampled, y_train_resampled)"
+    "showModelComparison(X_train_resampled, y_train_resampled, models)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +489,7 @@
        "['fraud_detection.pkl']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
